crates/rome_service/src/configuration/snapshots/config_already_exists.snap
---
source: crates/rome_service/src/configuration/diagnostics.rs
expression: content
---
biome.json configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × It seems that a configuration file already exists
  


