crates/rome_service/src/configuration/snapshots/incorrect_pattern.snap
---
source: crates/rome_service/src/configuration/diagnostics.rs
expression: content
---
biome.json configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Couldn't parse the *******, reason: wildcards are either regular `*` or recursive `**`
  


